PP-14727 replace Immutable Map with Map